--- a/static/css/for_account.css
+++ b/static/css/for_account.css
@@ -1,7 +1,7 @@
 .description{
-  font-size: 30px;
+  font-size: clamp(14px,3vw,28px);
   font-weight: 600;
- padding-top: 20px;
+ padding-top: 10px;
  padding-left: 15px;
  padding-right: 10px;
  padding-bottom: 8px;
@@ -17,6 +17,22 @@
  text-align: center;
 }
 
+.video-container {
+  position: relative;
+  width: 100%;
+  height: clamp(270px,25vw,500px);
+
+}
+.img {
+  position: absolute;
+  top: 0;
+  left: 0;
+width:100%;
+  height: 100%;
+  z-index: 5;
+
+}
+
   header.masthead
   {background:no-repeat center center;background-color:#e0e6ea
       ;height: 30rem;width:100%;backface-visibility: visible;background-size:cover;}
@@ -26,16 +42,11 @@
     {padding:25px 0 150px;color:#3c4757}
     header.masthead .page-heading .subheading,header.masthead .site-heading .subheading
     {
-        font-size:30px;color: #fbf8f8;font-weight:620;line-height:1.1;display:block;
+        font-size:clamp(20px,4vw,35px);color: #fbf8f8;font-weight:620;line-height:1.1;display:block;
         margin:30px 0 0;font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     }
 
-h1{
-    font-size: 80px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    
-    color: #f0e9e9;
-}
+
 
 header.masthead .site-heading
 {text-align:center;padding-top: 150px;}
@@ -48,9 +59,10 @@ header.masthead .site-heading
        margin-right: 12%;
       }
       p{
-        font-size: 40px;
+        font-size: clamp(22px,5vw,40px);
       font-family: Arial, Helvetica, sans-serif;
       margin-bottom: 20px;
+      font-weight: 600;
       }
 .container-post-profile{
    margin-right: 10%;
@@ -61,18 +73,20 @@ header.masthead .site-heading
 }
 
 #uid{
-  font-size: 40px;
-  width: 20rem;
+  font-size: clamp(20px,4vw,40px);
+  width: 300px
   
 }
 h1{
-  font-size: 65px;
+  font-size: clamp(40px,6vw,65px);
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   margin-bottom: 30px;
+  margin-top: 40px;
+ 
   color: rgb(253, 254, 255);
 }
   h2{
-      font-size: 65px;
+      font-size: clamp(32px,5vw,65px);
       font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
       margin-bottom: 30px;
       color: rgb(8, 159, 247);
@@ -92,39 +106,59 @@ h1{
     box-shadow: 12px 12px 8px rgb(51, 51, 75);
     border: #000;
   }
+  .container-2{
+   
+    border-radius: 9px;
+    
+  box-shadow:  5px 5px 9px rgb(88, 94, 84);
+    max-width:100%;
+  background:linear-gradient(240deg,#8e939e,#494D5F);
+   
+ margin-bottom: 6%;
+   
+  }
+  .post-title-2{
+  font-size: 50px;
+    text-decoration:#F3BFB3 underline;
+    margin-left: 1%;
+    margin-bottom: 12px;
+    color:#F3BFB3;
+   padding-top: 1%;
+  
+   }
+   .post-meta-2{
+    margin-left: 5%;
+   font-size: 24px;
+    color:white;
+    font-weight: 700;
+   }
 
-.buttons{
- 
-  margin-left: 30px;
-  font-size: 32px;
-  font-weight: 800;
-}
 
-  .post-title{
+ .content-2{
+        line-height: 1.0;
+      font-size: 36px;
+       margin-top: 6px;
+       margin-left:8% ;
+     font-weight: 500;
+     margin-bottom: 10px;
+    margin-right: 3%;
+     color:white
+        }
+
+        #view_button{
  
-    margin-left: 15px;
-    font-size: 50px;
-    font-family: 'Courier New', Courier, monospace;
-    font-weight: 800;
-    color: #000;
-    margin-bottom: 10px;
-  }
-  .post-meta{
-    font-size: 24px;
-    margin-left: 45px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: #ffffff;
-    opacity: 12;
-  }
-  .content-prof{
-    margin-top: 10px;
-    margin-left: 30px;
-    margin-right: 30px;
-    font-size: 34px;
-  font-weight: 500;
-  }
-  span{
-      font-size: medium;
+          margin-left: 6px;
+          font-size: clamp(10px,2vw,24px);
+          font-weight: 800;
+          margin-bottom: 8px;
+          color: rgb(255, 255, 255);
+         border:3px solid black;
+          background:#A55C1B
+        }
+
+ 
+  .subheading{
+      font-size:clamp(30px,6vw,45px);
   }
 
 
@@ -132,6 +166,8 @@ h1{
 
       #sendMessageButton{
         float: right;
+        font-size: clamp(12px,4vw,25px);
+        font-weight: 600;
       }
 
 /* buttons-profile*/
@@ -147,32 +183,29 @@ h1{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-weight: 400;
 }
- .btnContact {
-  width: 9%;
-  height: 5%;
-  border: none;
-  font-size: clamp(24px,5vw,12px);
-  border-radius: 10px;
-  padding: 0.6%;
- margin-left: 85%;
- font-weight: 700;
- text-decoration: none;
-  background:linear-gradient(340deg, rgba(215, 86, 11, 0.8), rgba(207, 39, 84, 0));
+ #add_button{
+ 
   
-  color: #fff;
+ 
+    margin-left: 6px;
+    font-size: clamp(18px,3vw,40px);
+    font-weight: 800;
+    margin-bottom: 8px;
+    padding: 0.8%;
+    
+    text-decoration: none;
+   border-radius: 5px;
+ float: right;
+
+    background:#dd1818;
+ border: 2px solid black;
+  color: #ffffff;
   cursor: pointer;
   margin-bottom: 0px;
 }
-@media (max-width:1950px){
-  .btnContact{
-    width:15%
-  }
-}
+
 @media (max-width:1350px){
-  .btnContact{
-    width:20%;
-    margin-left: 78%;
-  }
+ 
   .container-des{
 margin-left: 9%;
 margin-right: 9%;
@@ -182,86 +215,54 @@ margin-right: 9%;
   
     width: 80%;
   }
-  .post-title{
-    font-size: 44px;
-  }
-  .post-meta{
-    font-size: 18px;
-  }
- .content-prof{
-  font-size: 25px;
-  font-weight: 600;
- }}
- h2{
-  font-size: 50px;
- }
- #uid{
-  font-size: 30px;
- }
- @media (max-width:1000px){
-  .btnContact{
-    width: 25%;
-    margin-left: 70%;
-  }
- }
- @media (max-width:850px){
-  #uid{
-    width:15rem;
-  }
-  .content-prof{
-    font-weight: 600;
-  }
- }
- @media (max-width:600px){
-  .post-title{
-    font-size: 36px;
-  }
-  .post-meta{
-    font-size: 18px;
-    opacity: 20;
 
-  }
-  .content-prof{
-    font-size: 22px;
-    font-weight: 700;
+.post-title-2{
+  margin-left: 3%;
+  margin-top: 3%;
+  font-size: clamp(20px,4vw,30px);
+}
+.post-meta-2{
+  font-size: clamp(11px,2vw,24px);
+}
+
+
+.content-2{
+  font-size: clamp(15px,3vw,22px);
+  line-height: 1.1;
+}
+  
+
+}
+ @media (max-width:1000px){
+
+ }
+ @media (min-width:850px){
+
+ #add_button{
+  float: none;
+  margin-left: 80%;
+ }
+ }
+ 
+ 
+ @media (min-width:2000px){
+  #add_button{
+    margin-left: 85%;
   }
  }
- @media (max-width:740px){
-  .btnContact{
-    width: 28%;
-    margin-left: 60%;
-  }}
-  @media (max-width:740px){
-    .btnContact{
-      width: 34%;
-      margin-left: 58%;
+  @media (max-width:780px){
+  
+    #uid{
+      width: 180px;
     }
 
  }
  @media (max-width:440px){
-  .btnContact{
-    width: 42%;
-    margin-left:50% ;
-  }
-  h2{
-    font-size: 44px;
-  }
-  #uid{
-    font-size: 24px;
-    width:10rem
-  }
-  .post-title{
-    font-size: 28px;
-  }
-  .post-meta{
-    font-size:12px;
-    opacity: 20;
+  
+ 
 
-  }
-  .content-prof{
-    font-size: 16px;
-    font-weight: 500;
-  }
+  
+ 
   .text-2{
     font-size: 16px;
   }
