--- a/static/css/for_forms.css
+++ b/static/css/for_forms.css
@@ -101,20 +101,32 @@ html {
     -webkit-text-size-adjust: 100%;
     text-size-adjust: 100%;
  }
-body{
-    background-color: #211e1e;
- 
+ *, body {
+   
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    -moz-osx-font-smoothing: grayscale;
+    position: relative;
+    background-color: #000;
 }
 .container-form-1{
-    display: flex;
+   display: flex;
  justify-content: center;
+ align-items:center;
+
 
 }
+
 .contact-form{
-    background: linear-gradient(17deg, rgba(255,0,0,.8), rgba(255,0,0,0) 84.71%);
-    margin-top: 100%;
+    background: linear-gradient(17deg, #dd1818, #333333 80% );
+ 
+ 
+  margin-top:28%;
     width: 90%;
     
+           
     border-radius: 12px;
   
 }
@@ -144,13 +156,13 @@ body{
     text-align: center;
     color: #496582;
     font-family: Perpetua;
-    font-size: 30px;
+    font-size: clamp(30px,4vw,65px);
     font-weight: 700;
 }
 .contact-form .btnContact {
     width: 50%;
     border: none;
-    font-size: 20px;
+    font-size: clamp(20px,1vw,30px);
     border-radius: 1rem;
     padding: 1.5%;
     background:linear-gradient(340deg, rgba(0,0,255,.8), rgba(0,0,255,0));
@@ -160,7 +172,7 @@ body{
     margin-bottom: 15px;
 }
 label{
-    color: #000;
+    color: #fff685;
     font-size: 18px;
     font-weight: 700;
     letter-spacing: 1px;
@@ -176,24 +188,23 @@ label{
     cursor: pointer;
 }
 .form-control{
-    font-size: 22px;
+    font-size: clamp(16px,2vw,28px);
     font-weight: 500;
     margin-left: 7px;
     margin-top: 3px;
     margin-bottom: 3px;
     margin-right: 4px;
+    background-color: azure;
 }
 @media (min-width:440px){
-    .contact-form{
-      margin-top: 70%;
-    }
+ .contact-form{
+    margin-top: 150px;
+ }
     .form-control{
-        font-size: 28px;
+    
         font-weight: 600;
     }
-    .contact-form h3{
-        font-size: 30px;
-    }
+  
     .form-control{
         width: 13rem;
         height: 1.5rem;
@@ -201,22 +212,19 @@ label{
     .contact-form img{
         width: 7rem;
     }
-    .form-control .btnContact{
-        font-size: 44px;
-    }
+ 
 }
+
 @media (min-width:700px){
     .contact-form{
         background-color: #000;
-        margin-top: 45%;
+      margin-top: 120px;
     }
     .form-control{
-        font-size: 28px;
+       
         font-weight: 600;
     }
-    .contact-form h3{
-        font-size: 38px;
-    }
+
     .form-control{
         width: 80%;
     }
@@ -229,35 +237,30 @@ label{
 @media (min-width:950px){
     .contact-form{
         background-color: #000;
-        margin-top: 30%;
+      margin-top: 50px;
     }
     .form-control{
-        font-size: 28px;
+       
         font-weight: 600;
         width: 70rem;
     }
-    .contact-form h3{
-        font-size: 36px;
-    }
+  
 }
 
 @media (min-width:1300px){
     .contact-form{
         background-color: #111111;
-        margin-top: 20%;
+      
         width: 90%;
     }
     .form-control{
-        font-size: 28px;
+      
         font-weight: 600;
         width: 70rem;
         height: 3rem;
     }
-    .contact-form h3{
-       
-        font-size: 40px;
-    }.contact-form .btnContact{
-        font-size: 30px;
+  .contact-form .btnContact{
+      
         width: 30rem;
         height: 5rem;
     }
@@ -272,12 +275,13 @@ label{
 @media (min-width:1500px)
 {
     .contact-form{
+        margin-top: 150px;
+    }
+    .contact-form{
         width: 140rem;
-        margin-top: 6%;
+      
     }
-    .contact-form h3{
-        font-size: 50px;
-    }
+ 
     .form-control{
         width:20rem;
     }
