--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.75, shrink-to-fit=no,maximum-scale=0.75">
+    <meta name="viewport" content="width=device-width, initial-scale=0., shrink-to-fit=no,maximum-scale=0.75">
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Vriddhi</title>
@@ -43,7 +43,10 @@
           <input type="checkbox" id="show-menu">
           <label for="show-menu" class="menu-icon"><i class="fas fa-bars" id="menu"></i></label>
           <div class="content">
-          <div class="logo"><a href="#">Vriddhi</a></div>
+          <div class="logo">
+            <a >Vriddhi</a>
+            <img  src="{{url_for('static', filename='img/vriddhi_logo.png')}}" alt="" width="60" height="60" padding-bottom="12px">
+          </div>
             <ul class="links">
               
               <li><a href="/home">Home</a></li>
