--- a/templates/user_account.html
+++ b/templates/user_account.html
@@ -1,21 +1,24 @@
 {% extends "layout.html" %}
 {% block body %}
 
+
+   
 <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/profile.webp') }}')">
   <div class="overlay"></div>
   <div class="container-image-fluid">
    
         <div class="site-heading">
           <h1>{{user.username}}</h1>
-          <span class="subheading">Became A Individual on {{user.date}}</span>
+          <span class="subheading">Joined on {{user.date}}</span>
           
          
         </div>
       </div>
     </div>
   </div>
-  <link href="{{ url_for('static', filename='css/for_account.css') }}" rel="stylesheet">
 </header>
+  <link href="{{ url_for('static', filename='css/for_account.css') }}" rel="stylesheet">
+
     
     <!-- Main Content -->
   <body>
@@ -29,7 +32,7 @@
       
     <div class="description">
      
-      <div class="desire" >{{user.description}}
+      <div>{{user.description}}
        <br>
       </div>
     
@@ -48,23 +51,21 @@
     </br>
     {% if posts_of_user %}
         {% for post_of_user in posts_of_user %}
-        <div class="post-preview">
-          <br>
-              <div class="post-title">{{ post_of_user.title }}
+        <div class="container-2">
+         
+              <div class="post-title-2">{{ post_of_user.title }}
               </div>
-            <p class="post-meta">➔ Posted by {{user.username}}
+            <p class="post-meta-2">➔ Posted 
             
               on {{post_of_user.date}}</p>
-          <div class="content-prof" >{{post_of_user.content[0:300]}}...</div>
-        </br> 
-      </br>
+          <div class="content-2" >{{post_of_user.content[0:100]}}...</div>
+     
         <div class="buttons">
-      <a class="btn btn-warning "href="/individual_post/{{post_of_user.slug}}" role="button">  View</a>
+      <a class="btn btn-warning "href="/individual_post/{{post_of_user.slug}}" role="button" id="view_button">  View</a>
      </div>
     <br>
         </div>
-     <br>
-     <br>
+   
       
    
         {% endfor %}
@@ -77,8 +78,7 @@
      
   </body>
   <br>
-  <br>
-  <br>
+
   <br>
   <br>
 {% endblock %}
