--- a/static/css/for_forms.css
+++ b/static/css/for_forms.css
@@ -172,7 +172,7 @@ html {
     margin-bottom: 15px;
 }
 label{
-    color: #fff685;
+    color: lightcoral;
     font-size: 18px;
     font-weight: 700;
     letter-spacing: 1px;
