--- a/static/css/for_account.css
+++ b/static/css/for_account.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Kenia&display=swap');
 .description{
   font-size: clamp(14px,3vw,28px);
   font-weight: 600;
@@ -124,6 +125,7 @@ h1{
     margin-bottom: 12px;
     color:#F3BFB3;
    padding-top: 1%;
+   font-family: Keniya;
   
    }
    .post-meta-2{
@@ -131,6 +133,7 @@ h1{
    font-size: 24px;
     color:white;
     font-weight: 700;
+
    }
 
 
@@ -142,7 +145,8 @@ h1{
      font-weight: 500;
      margin-bottom: 10px;
     margin-right: 3%;
-     color:white
+     color:white;
+     font-family: Saira;
         }
 
         #view_button{
@@ -151,9 +155,9 @@ h1{
           font-size: clamp(10px,2vw,24px);
           font-weight: 800;
           margin-bottom: 8px;
-          color: rgb(255, 255, 255);
+          color: rgb(18, 16, 16);
          border:3px solid black;
-          background:#A55C1B
+          background:transparent
         }
 
  
@@ -179,7 +183,7 @@ h1{
   border-radius: 5px;
 }
 .text-2{
-  font-size: 20px;
+  font-size: 12px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-weight: 400;
 }
@@ -197,9 +201,10 @@ h1{
    border-radius: 5px;
  float: right;
 
-    background:#dd1818;
- border: 2px solid black;
-  color: #ffffff;
+    background:
+  #dcdcdc;
+ border: 1px solid black;
+  color: #534545;
   cursor: pointer;
   margin-bottom: 0px;
 }
@@ -219,7 +224,8 @@ margin-right: 9%;
 .post-title-2{
   margin-left: 3%;
   margin-top: 3%;
-  font-size: clamp(20px,4vw,30px);
+  font-size: clamp(24px,4vw,30px);
+  font-family: Kenia;
 }
 .post-meta-2{
   font-size: clamp(11px,2vw,24px);
