--- a/static/css/for_home.css
+++ b/static/css/for_home.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Kenia&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lilita One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Siara&display=swap');
 /*for vedio*/
 body, header {
   margin: 0;
