--- a/templates/user_account.html
+++ b/templates/user_account.html
@@ -58,10 +58,10 @@
             <p class="post-meta-2">➔ Posted 
             
               on {{post_of_user.date}}</p>
-          <div class="content-2" >{{post_of_user.content[0:100]}}...</div>
+          <div class="content-2" >{{post_of_user.content[0:200]}}...</div>
      
         <div class="buttons">
-      <a class="btn btn-warning "href="/individual_post/{{post_of_user.slug}}" role="button" id="view_button">  View</a>
+      <a class="btn btn-warning "href="/individual_post/{{post_of_user.slug}}" role="button" id="view_button"> <div> View</div></a>
      </div>
     <br>
         </div>
