--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,7 +42,7 @@
                 <label for="show-features">Features</label>
                 <ul>
                   <li><a href="https://google.com" target="_blank">Search Google</a></li>
-                  <li><a href="#">Something more to add</a></li>
+                  <li><a href="#">Something to add</a></li>
                 
                 </ul>
               </li>
