--- a/static/css/for_all_web.css
+++ b/static/css/for_all_web.css
@@ -114,7 +114,7 @@ html {
   text-size-adjust: 100%;
 }
 body{
-  background-color: #ece4e4;
+  background-color: #efee1e1;
   height: 100%;
 }
 
@@ -129,10 +129,8 @@ body{
 /* footer */
 .cont-footer{
 position: fixed;
-background:linear-gradient(120deg,
-#434343
-,
-#181818);
+background:brown
+;
 bottom: 0;
 left: 0;
 margin-top: 50px;
@@ -168,7 +166,7 @@ float:right;
 
 }
 .wrapper{
-  background: linear-gradient(110.6deg, rgb(46, 49, 49) 55.9%, rgba(110,123,251,1) 91.1%);
+  background: linear-gradient(110.6deg, rgb(46, 49, 49) 40.9%, rgba(110,123,251,1) 91.1%);
   position: fixed;
   width: 100%;
   height: clamp(50px,6vw,80px);
