--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no,maximum-scale=0.9">
+    <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Vriddhi</title>
