--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,9 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=0.5, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="A platform to freely share your views , your thinking, your ideas
+     and communicate to various communities.A world for the people who are in search for a better place than the diluted world. ">
+  <meta name="author" content="A human who has found the truth.">
   <title>Vriddhi</title>
 
   <!-- Bootstrap core CSS -->
