--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,8 @@
             <h1>VR_iddH!</h1></div>
             <div class="subheading">
             If you  came here it may be because of your 
-            <span>curiosity</span> or you are a <span>individual</span>
-            but if  you are not, in some time you will be one.
+            <span>curiosity</span>,or you are a <span>individual</span>
+            and you know the <span>truth</span> but if  you are not, in some time you will be one.
           </br>
            
          
