--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Home page or in easy words it is the portal of a world where you can meet your immense impossibilities.
+      LAYOUT for all pages of vriddhi.">
     <meta name="author" content="">
     <title>Vriddhi</title>
   
