--- a/static/css/for_home.css
+++ b/static/css/for_home.css
@@ -33,6 +33,23 @@ height:100%;
  
 
 }
+.notfound{
+  font-size: clamp(48px,6vw,75px);
+  font-family: Impact;
+  margin-bottom: 30px;
+  margin-top: 40px;
+  margin-top: 4%;
+ 
+  color: black;
+}
+.nfs{
+  font-size: clamp(18px,6vw,40px);
+  font-family: Impact;
+  margin-bottom: 30px;
+  margin-top: 40px;
+ 
+  color: black;
+}
 
 
 
