--- a/templates/notfound.html
+++ b/templates/notfound.html
@@ -4,12 +4,13 @@
 </br>
 </br>
 </br>
+<link href="{{url_for('static', filename='css/for_home.css')}}" rel="stylesheet">
 <center>
-    <h1>
+    <div class="notfound">
         404
         Page not found!!
-    </h1>
-    <p>Sorry! This page i have not created. </p>
+    </div>
+    <div class="nfs">Sorry! This page i have not created. </div>
 </center>
     
 
