--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.9, shrink-to-fit=no">
-    <meta name="description" content="Home page or in easy words it is the portal of a world where you can meet your immense impossibilities.
-      LAYOUT for all pages of vriddhi.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no,maximum-scale=0.75">
+    <meta name="description" content="">
     <meta name="author" content="">
     <title>Vriddhi</title>
   
@@ -20,8 +19,23 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" rel="stylesheet">
   </head>
 
+  <body>
 
 
+    <!-- Navigation -->
+ 
+    <!-- Page Header -->
+    <!DOCTYPE html>
+    <!-- Created By CodingNepal - www.codingnepalweb.com -->
+    <html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <title> Vriddhi</title>
+     
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    </head>
     <body>
       <div class="wrapper">
         <nav>
@@ -43,7 +57,7 @@
                 <label for="show-features">Features</label>
                 <ul>
                   <li><a href="https://google.com" target="_blank">Search Google</a></li>
-                  <li><a href="#">Something to add</a></li>
+                  <li><a href="#">Something more to add</a></li>
                 
                 </ul>
               </li>
@@ -54,39 +68,7 @@
               </li>
               <li><a href="/community">IN_dividuals</a></li>
               <li id="logout"><a href="/logout">Logout</a></li>
-              <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end" id="refbut-nav">
-                <!-- Facebook -->
-                <a
-                   class="btn btn-outline-light btn-floating m-1"
-                   class="text-white"
-                   role="button"
-                   ><i class="fab fa-facebook-f"></i
-                  ></a>
-    
-                <!-- Twitter -->
-                <a
-                   class="btn btn-outline-light btn-floating m-1"
-                   class="text-white"
-                   role="button"
-                   ><i class="fab fa-twitter"></i
-                  ></a>
-    
-                <!-- Google -->
-                <a href="https://google.com"
-                   class="btn btn-outline-light btn-floating m-1"
-                   class="text-white"
-                   role="button"
-                   ><i class="fab fa-google"></i
-                  ></a>
-    
-                <!-- Instagram -->
-                <a
-                   class="btn btn-outline-light btn-floating m-1"
-                   class="text-white"
-                   role="button"
-                   ><i class="fab fa-instagram"></i
-                  ></a>
-              </div>
+         
             </ul> 
           </div>
           <label for="show-search"  class="search-icon"><i class="fas fa-search" id="icon-s"></i></label>
@@ -96,7 +78,9 @@
           </form>
         </nav>
       </div>
-  
+     
+    </body>
+    </html>
 
 {% block body %} {% endblock %}
 
@@ -115,9 +99,9 @@
           <div class="col-md-7 col-lg-8 text-center text-md-start">
             <!-- Copyright -->
             <div class="copyright">
-              @ 2023 The Individuals World
-              <a class="text-white" href="https://mdbootstrap.com/"
-                 > Vriddhi</a
+              @ 2023 The Individuals World ||
+              <a class="text-white" href="https://vriddhi.site/add_post"
+                 >Vriddhi</a
                 >
                
             <!-- Copyright -->
