--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -14,7 +14,7 @@
 </header>
 <body>
   <div class="container-form-1">
-<div class="contact-form">
+            <div class="contact-form">
             <div class="contact-image">
                 <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
             </div>
@@ -23,7 +23,7 @@
                <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                          <label>TITLE</label>
+                          <label>Title</label>
                             <input type="text" name="title" class="form-control" placeholder="_____" value=""required />
                         </div>
                         <div class="form-group">
@@ -33,13 +33,13 @@
                       
                      
                         <div class="form-group">
-                            <input type="submit" name="btnSubmit" class="btnContact" value="Share" />
+                            <input type="submit" name="btnSubmit" class="btnContact" value="Post" />
                         </div>
                     </div>
                     <div class="col-md-8">
                         <div class="form-group">
-                          <label>Creation of your Mind</label>
-                            <textarea name="content" class="form-control" placeholder="✐_____________" id="content" style="margin-top:15px;width: 100%; height: 150px;border-radius: 8px;"required></textarea>
+                          <label>Something--</label>
+                            <textarea name="content" class="form-control" placeholder="✐your post here" id="content" style="margin-top:15px;width: 100%; height: 150px;border-radius: 8px;"required></textarea>
                         </div>
                     </div>
                 </div>
