--- a/templates/individual_post.html
+++ b/templates/individual_post.html
@@ -4,14 +4,16 @@
     <!-- Page Header -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
-  
-    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/Post.jpg') }}')">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <header class="masthead" style="background-image: url('{{ url_for('static', filename='img/post.jpg') }}')">
       <div class="overlay"></div>
       <div class="container-image-fluid">
        
             <div class="site-heading">
               <h1>{{post.title}}</h1>
-              <div  class="subheading">A thinking of an Individual</div>
+          
               
              
             </div>
